@@ -6,11 +6,9 @@ import ai.brokk.IContextManager;
 import ai.brokk.Service;
 import ai.brokk.TaskEntry;
 import ai.brokk.TaskResult;
-import ai.brokk.analyzer.CodeUnit;
-import ai.brokk.analyzer.CodeUnitType;
-import ai.brokk.analyzer.ExternalFile;
-import ai.brokk.analyzer.ProjectFile;
+import ai.brokk.analyzer.*;
 import ai.brokk.testutil.NoOpConsoleIO;
+import ai.brokk.testutil.TestAnalyzer;
 import ai.brokk.testutil.TestContextManager;
 import ai.brokk.util.HistoryIo;
 import ai.brokk.util.Messages;
@@ -24,10 +22,10 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Comparator;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
 import java.util.List;
-import java.util.Objects;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 import javax.imageio.ImageIO;
@@ -44,11 +42,12 @@ public class ContextSerializationTest {
 
     @BeforeEach
     void setup() throws IOException {
-        mockContextManager = new TestContextManager(tempDir, new NoOpConsoleIO());
-        // Clear the intern pool before each test to ensure isolation
-        FrozenFragment.clearInternPoolForTesting();
+        var codeFragmentTargetCu = CodeUnit.cls(
+                new ProjectFile(tempDir, "src/CodeFragmentTarget.java"), "com.example", "CodeFragmentTarget");
+        var testAnalyzer = new TestAnalyzer(List.of(codeFragmentTargetCu), Map.of());
+        mockContextManager = new TestContextManager(tempDir, new NoOpConsoleIO(), testAnalyzer);
         // Reset fragment ID counter for test isolation
-        ContextFragment.nextId.set(1);
+        ContextFragment.setMinimumId(1);
 
         // Clean .brokk/sessions directory for session tests
         Path sessionsDir = tempDir.resolve(".brokk").resolve("sessions");
@@ -153,7 +152,7 @@ public class ContextSerializationTest {
                 taskFragment,
                 CompletableFuture.completedFuture("Action for task"));
 
-        originalHistory.addFrozenContextAndClearRedo(context2.freeze());
+        originalHistory.pushContext(context2);
 
         Path zipFile = tempDir.resolve("complex_history.zip");
         HistoryIo.writeZip(originalHistory, zipFile);
@@ -163,15 +162,15 @@ public class ContextSerializationTest {
         assertEquals(
                 originalHistory.getHistory().size(), loadedHistory.getHistory().size());
 
-        // Compare Context 1 (which will be frozen)
-        Context originalCtx1Frozen = originalHistory.getHistory().get(0); // This is already frozen by ContextHistory
+        // Compare Context 1
+        Context originalCtx1 = originalHistory.getHistory().get(0);
         Context loadedCtx1 = loadedHistory.getHistory().get(0);
-        assertContextsEqual(originalCtx1Frozen, loadedCtx1);
+        assertContextsEqual(originalCtx1, loadedCtx1);
 
-        // Compare Context 2 (which will be frozen)
-        Context originalCtx2Frozen = originalHistory.getHistory().get(1); // This is already frozen by ContextHistory
+        // Compare Context 2
+        Context originalCtx2 = originalHistory.getHistory().get(1);
         Context loadedCtx2 = loadedHistory.getHistory().get(1);
-        assertContextsEqual(originalCtx2Frozen, loadedCtx2);
+        assertContextsEqual(originalCtx2, loadedCtx2);
 
         // Verify image content from the image fragment in loadedCtx2
         var loadedImageFragmentOpt = loadedCtx2
@@ -182,9 +181,7 @@ public class ContextSerializationTest {
         var loadedImageFragment = loadedImageFragmentOpt.get();
 
         byte[] imageBytesContent;
-        if (loadedImageFragment instanceof FrozenFragment ff) {
-            imageBytesContent = ff.imageBytesContent();
-        } else if (loadedImageFragment instanceof ContextFragment.AnonymousImageFragment pif) {
+        if (loadedImageFragment instanceof ContextFragment.AnonymousImageFragment pif) {
             imageBytesContent = imageToBytes(pif.image());
         } else {
             throw new AssertionError("Unexpected fragment type for pasted image: " + loadedImageFragment.getClass());
@@ -221,31 +218,90 @@ public class ContextSerializationTest {
         }
     }
 
-    private void assertContextFragmentsEqual(ContextFragment expected, ContextFragment actual)
-            throws IOException, InterruptedException {
+    private void assertContextFragmentsEqual(ContextFragment expected, ContextFragment actual) throws IOException {
         assertEquals(expected.id(), actual.id(), "Fragment ID mismatch");
         assertEquals(expected.getType(), actual.getType(), "Fragment type mismatch for ID " + expected.id());
-        assertEquals(
-                expected.description(), actual.description(), "Fragment description mismatch for ID " + expected.id());
-        assertEquals(
-                expected.shortDescription(),
-                actual.shortDescription(),
-                "Fragment shortDescription mismatch for ID " + expected.id());
-        assertEquals(expected.isText(), actual.isText(), "Fragment isText mismatch for ID " + expected.id());
-        assertEquals(
-                expected.syntaxStyle(), actual.syntaxStyle(), "Fragment syntaxStyle mismatch for ID " + expected.id());
+        if (expected instanceof ContextFragment.ComputedFragment cvExpected
+                && actual instanceof ContextFragment.ComputedFragment cvActual) {
+            var expectedDescription = cvExpected.computedDescription().await(Duration.of(10, ChronoUnit.SECONDS));
+            var actualDescription = cvActual.computedDescription().await(Duration.of(10, ChronoUnit.SECONDS));
+            if (expectedDescription.isEmpty() || actualDescription.isEmpty()) {
+                fail("Fragment descriptions could not be computed within 10 seconds");
+            } else {
+                assertEquals(
+                        expectedDescription.get(),
+                        actualDescription.get(),
+                        "Fragment description mismatch for ID " + expected.id());
+                // Short description is based off of description
+                assertEquals(
+                        cvExpected.shortDescription(),
+                        cvActual.shortDescription(),
+                        "Fragment shortDescription mismatch for ID " + expected.id());
+            }
 
-        if (expected.isText()) {
-            assertEquals(expected.text(), actual.text(), "Fragment text content mismatch for ID " + expected.id());
+            var expectedSyntaxStyle = cvExpected.computedSyntaxStyle().await(Duration.of(10, ChronoUnit.SECONDS));
+            var actualSyntaxStyle = cvActual.computedSyntaxStyle().await(Duration.of(10, ChronoUnit.SECONDS));
+            if (expectedSyntaxStyle.isEmpty() || actualSyntaxStyle.isEmpty()) {
+                fail("Fragment syntax style could not be computed within 10 seconds");
+            } else {
+                assertEquals(
+                        expectedSyntaxStyle.get(),
+                        actualSyntaxStyle.get(),
+                        "Fragment syntaxStyle mismatch for ID " + expected.id());
+            }
         } else {
-            // For image fragments, compare byte content if both are FrozenFragment or can provide bytes
-            if (expected instanceof FrozenFragment expectedFf && actual instanceof FrozenFragment actualFf) {
-                assertArrayEquals(
-                        expectedFf.imageBytesContent(),
-                        actualFf.imageBytesContent(),
-                        "FrozenFragment imageBytesContent mismatch for ID " + expected.id());
-            } else if (expected.image() != null
-                    && actual.image() != null) { // Fallback for non-frozen, if any after freezing
+            assertEquals(
+                    expected.description(),
+                    actual.description(),
+                    "Fragment description mismatch for ID " + expected.id());
+            assertEquals(
+                    expected.shortDescription(),
+                    actual.shortDescription(),
+                    "Fragment shortDescription mismatch for ID " + expected.id());
+            assertEquals(
+                    expected.syntaxStyle(),
+                    actual.syntaxStyle(),
+                    "Fragment syntaxStyle mismatch for ID " + expected.id());
+        }
+
+        assertEquals(expected.isText(), actual.isText(), "Fragment isText mismatch for ID " + expected.id());
+        if (expected.isText()) {
+            if (expected instanceof ContextFragment.ComputedFragment cvExpected
+                    && actual instanceof ContextFragment.ComputedFragment cvActual) {
+                var expectedText = cvExpected.computedText().await(Duration.of(30, ChronoUnit.SECONDS));
+                var actualText = cvActual.computedText().await(Duration.of(30, ChronoUnit.SECONDS));
+                if (expectedText.isEmpty() || actualText.isEmpty()) {
+                    fail("Fragment text content could not be computed within given timeout");
+                } else {
+                    assertEquals(
+                            expectedText.get(),
+                            actualText.get(),
+                            "Fragment text content mismatch for ID " + expected.id());
+                }
+            } else {
+                assertEquals(expected.text(), actual.text(), "Fragment text content mismatch for ID " + expected.id());
+            }
+        } else {
+            // For image fragments, compare byte content via live image fragments
+            if (expected instanceof ContextFragment.ComputedFragment cvExpected
+                    && actual instanceof ContextFragment.ComputedFragment cvActual) {
+                var maybeExpectedBytesFuture = cvExpected.computedImageBytes();
+                var maybeActualBytesFuture = cvActual.computedImageBytes();
+                if (maybeExpectedBytesFuture != null && maybeActualBytesFuture != null) {
+                    var expectedBytes = maybeExpectedBytesFuture.await(Duration.of(10, ChronoUnit.SECONDS));
+                    var actualBytes = maybeActualBytesFuture.await(Duration.of(10, ChronoUnit.SECONDS));
+                    if (expectedBytes.isEmpty() || actualBytes.isEmpty()) {
+                        fail("Fragment image content could not be computed within 10 seconds");
+                    } else {
+                        assertArrayEquals(
+                                expectedBytes.get(),
+                                actualBytes.get(),
+                                "Fragment image content mismatch for ID " + expected.id());
+                    }
+                } else {
+                    fail("Image byte futures are null, these fragments are not an images which was expected!");
+                }
+            } else {
                 assertArrayEquals(
                         imageToBytes(expected.image()),
                         imageToBytes(actual.image()),
@@ -256,19 +312,11 @@ public class ContextSerializationTest {
         // Compare additional serialized top-level methods
         assertEquals(expected.repr(), actual.repr(), "Fragment repr mismatch for ID " + expected.id());
 
-        // Compare files (sources are not snapshotted into FrozenFragment directly)
+        // Compare files
         assertEquals(
                 expected.files().stream().map(ProjectFile::toString).collect(Collectors.toSet()),
                 actual.files().stream().map(ProjectFile::toString).collect(Collectors.toSet()),
                 "Fragment files mismatch for ID " + expected.id());
-
-        if (expected instanceof FrozenFragment expectedFf && actual instanceof FrozenFragment actualFf) {
-            assertEquals(
-                    expectedFf.originalClassName(),
-                    actualFf.originalClassName(),
-                    "FrozenFragment originalClassName mismatch for ID " + expected.id());
-            assertEquals(expectedFf.meta(), actualFf.meta(), "FrozenFragment meta mismatch for ID " + expected.id());
-        }
     }
 
     private void assertTaskEntriesEqual(TaskEntry expected, TaskEntry actual) {
@@ -326,7 +374,7 @@ public class ContextSerializationTest {
 
         // Context 2 with second image fragment (same content, should intern to same FrozenFragment)
         var ctx2 = new Context(mockContextManager, "Context 2 with shared image").addVirtualFragment(liveImageFrag2);
-        originalHistory.addFrozenContextAndClearRedo(ctx2.freeze());
+        originalHistory.pushContext(ctx2);
 
         // Write to ZIP - this should NOT throw ZipException: duplicate entry
         Path zipFile = tempDir.resolve("shared_image_history.zip");
@@ -358,17 +406,13 @@ public class ContextSerializationTest {
                 .orElseThrow(() -> new AssertionError("Image fragment not found in loaded context 2"));
 
         byte[] imageBytes1, imageBytes2;
-        if (fragment1 instanceof FrozenFragment ff1) {
-            imageBytes1 = ff1.imageBytesContent();
-        } else if (fragment1 instanceof ContextFragment.AnonymousImageFragment pif1) {
+        if (fragment1 instanceof ContextFragment.AnonymousImageFragment pif1) {
             imageBytes1 = imageToBytes(pif1.image());
         } else {
             throw new AssertionError("Unexpected fragment type for image in ctx1: " + fragment1.getClass());
         }
 
-        if (fragment2 instanceof FrozenFragment ff2) {
-            imageBytes2 = ff2.imageBytesContent();
-        } else if (fragment2 instanceof ContextFragment.AnonymousImageFragment pif2) {
+        if (fragment2 instanceof ContextFragment.AnonymousImageFragment pif2) {
             imageBytes2 = imageToBytes(pif2.image());
         } else {
             throw new AssertionError("Unexpected fragment type for image in ctx2: " + fragment2.getClass());
@@ -490,7 +534,7 @@ public class ContextSerializationTest {
         });
 
         var context2 = new Context(mockContextManager, "Second context").withAction(slowFuture);
-        history.addFrozenContextAndClearRedo(context2.freeze());
+        history.pushContext(context2);
 
         // Create context with a very slow action that should timeout
         var timeoutFuture = CompletableFuture.supplyAsync(() -> {
@@ -503,7 +547,7 @@ public class ContextSerializationTest {
         });
 
         var context3 = new Context(mockContextManager, "Third context").withAction(timeoutFuture);
-        history.addFrozenContextAndClearRedo(context3.freeze());
+        history.pushContext(context3);
 
         // Wait for the slow future to complete before serialization
         Thread.sleep(1500);
@@ -564,7 +608,7 @@ public class ContextSerializationTest {
         var context2 = new Context(mockContextManager, "Context 2")
                 .addPathFragments(List.of(liveProjectPathFragment))
                 .addVirtualFragment(liveStringFragment);
-        history.addFrozenContextAndClearRedo(context2.freeze());
+        history.pushContext(context2);
 
         Path zipFile = tempDir.resolve("interning_test_history.zip");
         HistoryIo.writeZip(history, zipFile);
@@ -574,36 +618,31 @@ public class ContextSerializationTest {
         Context loadedCtx1 = loadedHistory.getHistory().get(0);
         Context loadedCtx2 = loadedHistory.getHistory().get(1);
 
-        // Verify ProjectPathFragment (which becomes FrozenFragment)
-        // After freezeOnly(), liveProjectPathFragment is turned into a FrozenFragment.
-        // Both contexts will reference the *same instance* of this FrozenFragment due to interning by content hash.
-        var frozenPathFrag1 = loadedCtx1
+        // Verify ProjectPathFragment
+        var pathFrag1 = loadedCtx1
                 .allFragments()
-                .filter(f -> f instanceof FrozenFragment
-                        && ((FrozenFragment) f)
-                                .originalClassName()
-                                .equals(ContextFragment.ProjectPathFragment.class.getName()))
-                .map(f -> (FrozenFragment) f)
+                .filter(f -> f instanceof ContextFragment.ProjectPathFragment)
+                .map(f -> (ContextFragment.ProjectPathFragment) f)
                 .findFirst()
-                .orElseThrow(() -> new AssertionError("Frozen ProjectPathFragment not found in loadedCtx1"));
+                .orElseThrow(() -> new AssertionError("ProjectPathFragment not found in loadedCtx1"));
 
-        var frozenPathFrag2 = loadedCtx2
+        var pathFrag2 = loadedCtx2
                 .allFragments()
-                .filter(f -> f instanceof FrozenFragment
-                        && ((FrozenFragment) f)
-                                .originalClassName()
-                                .equals(ContextFragment.ProjectPathFragment.class.getName()))
-                .map(f -> (FrozenFragment) f)
+                .filter(f -> f instanceof ContextFragment.ProjectPathFragment)
+                .map(f -> (ContextFragment.ProjectPathFragment) f)
                 .findFirst()
-                .orElseThrow(() -> new AssertionError("Frozen ProjectPathFragment not found in loadedCtx2"));
+                .orElseThrow(() -> new AssertionError("ProjectPathFragment not found in loadedCtx2"));
 
         assertSame(
-                frozenPathFrag1,
-                frozenPathFrag2,
-                "Frozen versions of the same dynamic ProjectPathFragment should be the same instance after deserialization and interning.");
+                pathFrag1,
+                pathFrag2,
+                "Deserialized versions of the same dynamic ProjectPathFragment should be the same instance after deserialization and interning.");
         // Verify meta for ProjectPathFragment
-        assertEquals(projectFile.getRoot().toString(), frozenPathFrag1.meta().get("repoRoot"));
-        assertEquals(projectFile.getRelPath().toString(), frozenPathFrag1.meta().get("relPath"));
+        assertEquals(
+                projectFile.getRoot().toString(), pathFrag1.file().getRoot().toString());
+        assertEquals(
+                projectFile.getRelPath().toString(),
+                pathFrag1.file().getRelPath().toString());
 
         // Verify StringFragment (which remains StringFragment, non-dynamic, content-hashed ID)
         var loadedStringFrag1 = loadedCtx1
@@ -643,7 +682,7 @@ public class ContextSerializationTest {
 
         var ctxWithTask2 = new Context(mockContextManager, "CtxTask2")
                 .addHistoryEntry(taskEntry, sharedTaskFragment, CompletableFuture.completedFuture("action2"));
-        origHistoryWithTask.addFrozenContextAndClearRedo(ctxWithTask2.freeze());
+        origHistoryWithTask.pushContext(ctxWithTask2);
 
         Path taskZipFile = tempDir.resolve("interning_task_history.zip");
         HistoryIo.writeZip(origHistoryWithTask, taskZipFile);
@@ -727,11 +766,12 @@ public class ContextSerializationTest {
                 .orElseThrow();
 
         assertTrue(
-                loadedRawFragment instanceof FrozenFragment, "ExternalPathFragment should be loaded as FrozenFragment");
-        var loadedFrozenFragment = (FrozenFragment) loadedRawFragment;
-        assertEquals(ContextFragment.FragmentType.EXTERNAL_PATH, loadedFrozenFragment.getType());
-        assertEquals(ContextFragment.ExternalPathFragment.class.getName(), loadedFrozenFragment.originalClassName());
-        assertEquals(externalFilePath.toString(), loadedFrozenFragment.meta().get("absPath"));
+                loadedRawFragment instanceof ContextFragment.ExternalPathFragment,
+                "ExternalPathFragment should be loaded as an ExternalPathFragment");
+        var loadedPathFragment = (ContextFragment.ExternalPathFragment) loadedRawFragment;
+        assertEquals(ContextFragment.FragmentType.EXTERNAL_PATH, loadedPathFragment.getType());
+        assertEquals(
+                externalFilePath.toString(), loadedPathFragment.file().absPath().toString());
     }
 
     @Test
@@ -755,23 +795,25 @@ public class ContextSerializationTest {
         Context loadedCtx = loadedHistory.getHistory().get(0);
         var loadedRawFragment = loadedCtx
                 .allFragments()
-                .filter(f -> f.getType()
-                        == ContextFragment.FragmentType.IMAGE_FILE) // getType on FrozenFragment returns originalType
+                .filter(f -> f.getType() == ContextFragment.FragmentType.IMAGE_FILE)
                 .findFirst()
                 .orElseThrow();
 
-        assertTrue(loadedRawFragment instanceof FrozenFragment, "ImageFileFragment should be loaded as FrozenFragment");
-        var loadedFrozenFragment = (FrozenFragment) loadedRawFragment;
-        assertEquals(ContextFragment.FragmentType.IMAGE_FILE, loadedFrozenFragment.getType());
-        assertEquals(ContextFragment.ImageFileFragment.class.getName(), loadedFrozenFragment.originalClassName());
+        assertTrue(
+                loadedRawFragment instanceof ContextFragment.ImageFileFragment,
+                "ImageFileFragment should be deserialized directly");
+        var loadedImageFragment = (ContextFragment.ImageFileFragment) loadedRawFragment;
+        assertEquals(ContextFragment.FragmentType.IMAGE_FILE, loadedImageFragment.getType());
 
         // Check path from meta
-        String loadedAbsPath = loadedFrozenFragment.meta().get("absPath");
+        String loadedAbsPath = loadedImageFragment.file().absPath().toString();
         assertNotNull(loadedAbsPath, "absPath not found in FrozenFragment meta for ImageFileFragment");
         assertEquals(imageFilePath.toString(), loadedAbsPath);
 
         // Check image content from bytes
-        byte[] imageBytes = loadedFrozenFragment.imageBytesContent();
+        byte[] imageBytes = Objects.requireNonNull(loadedImageFragment.computedImageBytes())
+                .await(Duration.ofSeconds(5))
+                .get();
         assertNotNull(imageBytes, "Image bytes not found in FrozenFragment for ImageFileFragment");
         Image loadedImageFromBytes = ImageIO.read(new ByteArrayInputStream(imageBytes));
         assertNotNull(loadedImageFromBytes);
@@ -836,14 +878,6 @@ public class ContextSerializationTest {
         if (loadedRawFragment instanceof ContextFragment.SkeletonFragment loadedFragment) {
             assertEquals(targetIds, loadedFragment.getTargetIdentifiers());
             assertEquals(ContextFragment.SummaryType.CODEUNIT_SKELETON, loadedFragment.getSummaryType());
-        } else if (loadedRawFragment instanceof FrozenFragment loadedFrozenFragment) {
-            assertEquals(ContextFragment.FragmentType.SKELETON, loadedFrozenFragment.getType());
-            assertEquals(ContextFragment.SkeletonFragment.class.getName(), loadedFrozenFragment.originalClassName());
-            assertEquals(
-                    String.join(";", targetIds), loadedFrozenFragment.meta().get("targetIdentifiers"));
-            assertEquals(
-                    ContextFragment.SummaryType.CODEUNIT_SKELETON.name(),
-                    loadedFrozenFragment.meta().get("summaryType"));
         } else {
             fail("Expected SkeletonFragment or FrozenFragment, got: " + loadedRawFragment.getClass());
         }
@@ -871,11 +905,6 @@ public class ContextSerializationTest {
 
         if (loadedRawFragment instanceof ContextFragment.UsageFragment loadedFragment) {
             assertEquals("com.example.MyClass.myMethod", loadedFragment.targetIdentifier());
-        } else if (loadedRawFragment instanceof FrozenFragment loadedFrozenFragment) {
-            assertEquals(ContextFragment.FragmentType.USAGE, loadedFrozenFragment.getType());
-            assertEquals(ContextFragment.UsageFragment.class.getName(), loadedFrozenFragment.originalClassName());
-            assertEquals(
-                    "com.example.MyClass.myMethod", loadedFrozenFragment.meta().get("targetIdentifier"));
         } else {
             fail("Expected UsageFragment or FrozenFragment, got: " + loadedRawFragment.getClass());
         }
@@ -902,8 +931,6 @@ public class ContextSerializationTest {
         if (loadedRawFragment instanceof ContextFragment.UsageFragment loadedFragment) {
             assertTrue(loadedFragment.includeTestFiles(), "includeTestFiles should be preserved as true");
             assertEquals("com.example.MyClass.myMethod", loadedFragment.targetIdentifier());
-        } else if (loadedRawFragment instanceof FrozenFragment ff) {
-            assertEquals(ContextFragment.FragmentType.USAGE, ff.getType());
         } else {
             fail("Expected UsageFragment or FrozenFragment, got: " + loadedRawFragment.getClass());
         }
@@ -934,13 +961,6 @@ public class ContextSerializationTest {
             assertEquals("com.example.MyClass.doStuff", loadedFragment.getMethodName());
             assertEquals(3, loadedFragment.getDepth());
             assertTrue(loadedFragment.isCalleeGraph());
-        } else if (loadedRawFragment instanceof FrozenFragment loadedFrozenFragment) {
-            assertEquals(ContextFragment.FragmentType.CALL_GRAPH, loadedFrozenFragment.getType());
-            assertEquals(ContextFragment.CallGraphFragment.class.getName(), loadedFrozenFragment.originalClassName());
-            assertEquals(
-                    "com.example.MyClass.doStuff", loadedFrozenFragment.meta().get("methodName"));
-            assertEquals("3", loadedFrozenFragment.meta().get("depth"));
-            assertEquals("true", loadedFrozenFragment.meta().get("isCalleeGraph"));
         } else {
             fail("Expected CallGraphFragment or FrozenFragment, got: " + loadedRawFragment.getClass());
         }
@@ -986,6 +1006,10 @@ public class ContextSerializationTest {
         Path zipFile = tempDir.resolve("test_pastetext_history.zip");
         HistoryIo.writeZip(originalHistory, zipFile);
         ContextHistory loadedHistory = HistoryIo.readZip(zipFile, mockContextManager);
+
+        // Allow both histories to be loaded
+        context.awaitContextsAreComputed(Duration.ofSeconds(10));
+        loadedHistory.liveContext().awaitContextsAreComputed(Duration.ofSeconds(10));
 
         assertContextsEqual(
                 originalHistory.getHistory().get(0), loadedHistory.getHistory().get(0));
@@ -1043,25 +1067,25 @@ public class ContextSerializationTest {
         // The IDs will be 3, 4, 5, 6, 7 based on current setup
         var vf1 = new ContextFragment.StringFragment(
                 mockContextManager,
+                "Content for uniqueText1 (first)",
                 "uniqueText1",
-                "Description for uniqueText1 (first)",
                 SyntaxConstants.SYNTAX_STYLE_NONE);
         var vf2 = new ContextFragment.StringFragment(
                 mockContextManager,
+                "Content for duplicateText (first)",
                 "duplicateText",
-                "Description for duplicateText (first)",
                 SyntaxConstants.SYNTAX_STYLE_NONE);
         var vf3 = new ContextFragment.StringFragment(
-                mockContextManager, "uniqueText2", "Description for uniqueText2", SyntaxConstants.SYNTAX_STYLE_NONE);
+                mockContextManager, "Content for uniqueText2", "uniqueText2", SyntaxConstants.SYNTAX_STYLE_NONE);
         var vf4_duplicate_of_vf2 = new ContextFragment.StringFragment(
                 mockContextManager,
+                "Content for duplicateText (second, different desc)",
                 "duplicateText",
-                "Description for duplicateText (second, different desc)",
                 SyntaxConstants.SYNTAX_STYLE_NONE);
         var vf5_duplicate_of_vf1 = new ContextFragment.StringFragment(
                 mockContextManager,
+                "Content for uniqueText1 (second, different desc)",
                 "uniqueText1",
-                "Description for uniqueText1 (second, different desc)",
                 SyntaxConstants.SYNTAX_STYLE_NONE);
 
         context = context.addVirtualFragment(vf1);
@@ -1083,35 +1107,35 @@ public class ContextSerializationTest {
 
         // Verify deduplication behavior of virtualFragments()
         List<ContextFragment.VirtualFragment> deduplicatedFragments =
-                deserializedContext.virtualFragments().collect(Collectors.toList());
+                deserializedContext.virtualFragments().toList();
 
         // Expected: 3 unique fragments based on text content.
         // The ones kept should be vf1, vf2, vf3 because they were added first for their respective texts.
         assertEquals(3, deduplicatedFragments.size(), "Should be 3 unique virtual fragments after deduplication.");
 
-        Set<String> actualTexts = deduplicatedFragments.stream()
-                .map(ContextFragment.VirtualFragment::text)
+        Set<String> actualDescriptions = deduplicatedFragments.stream()
+                .map(ContextFragment.VirtualFragment::description)
                 .collect(Collectors.toSet());
         assertEquals(
                 Set.of("uniqueText1", "duplicateText", "uniqueText2"),
-                actualTexts,
+                actualDescriptions,
                 "Texts of deduplicated fragments do not match expected unique texts.");
 
         // Verify that the specific fragments kept are the first ones encountered
         assertTrue(
                 deduplicatedFragments.stream()
-                        .anyMatch(f -> "uniqueText1".equals(f.text())
-                                && "Description for uniqueText1 (first)".equals(f.description())),
+                        .anyMatch(f -> "uniqueText1".equals(f.description())
+                                && "Content for uniqueText1 (first)".equals(f.text())),
                 "Expected first instance of 'uniqueText1' to be present.");
         assertTrue(
                 deduplicatedFragments.stream()
-                        .anyMatch(f -> "duplicateText".equals(f.text())
-                                && "Description for duplicateText (first)".equals(f.description())),
+                        .anyMatch(f -> "duplicateText".equals(f.description())
+                                && "Content for duplicateText (first)".equals(f.text())),
                 "Expected first instance of 'duplicateText' to be present.");
         assertTrue(
                 deduplicatedFragments.stream()
-                        .anyMatch(f -> "uniqueText2".equals(f.text())
-                                && "Description for uniqueText2".equals(f.description())),
+                        .anyMatch(f ->
+                                "uniqueText2".equals(f.description()) && "Content for uniqueText2".equals(f.text())),
                 "Expected 'uniqueText2' to be present.");
     }
 
@@ -1123,19 +1147,19 @@ public class ContextSerializationTest {
         var context1Id = context1.id();
         var diffContent =
                 """
-                          diff --git a/file.txt b/file.txt
-                          --- a/file.txt
-                          +++ b/file.txt
-                          @@ -1 +1 @@
-                          -hello
-                          +world
-                          """;
+                        diff --git a/file.txt b/file.txt
+                        --- a/file.txt
+                        +++ b/file.txt
+                        @@ -1 +1 @@
+                        -hello
+                        +world
+                        """;
         var gitState1 = new ContextHistory.GitState("test-commit-hash-1", diffContent);
         history.addGitState(context1Id, gitState1);
 
         // 2. Setup context 2 with a git state that has a null diff
         var context2 = new Context(mockContextManager, "Context with null diff git state");
-        history.addFrozenContextAndClearRedo(context2.freeze());
+        history.pushContext(context2);
         var context2Id = context2.id();
         var gitState2 = new ContextHistory.GitState("test-commit-hash-2", null);
         history.addGitState(context2Id, gitState2);
@@ -1182,10 +1206,12 @@ public class ContextSerializationTest {
         HistoryIo.writeZip(originalHistory, zipFile);
         ContextHistory loadedHistory = HistoryIo.readZip(zipFile, mockContextManager);
 
-        assertContextsEqual(
-                originalHistory.getHistory().get(0), loadedHistory.getHistory().get(0));
+        var originalCtx = originalHistory.getHistory().getFirst();
+        var loadedCtx = loadedHistory.getHistory().getFirst();
+        originalCtx.awaitContextsAreComputed(Duration.ofSeconds(15));
+        loadedCtx.awaitContextsAreComputed(Duration.ofSeconds(15));
+        assertContextsEqual(originalCtx, loadedCtx);
 
-        Context loadedCtx = loadedHistory.getHistory().get(0);
         var loadedRawFragment = loadedCtx
                 .virtualFragments()
                 .filter(f -> f.getType() == ContextFragment.FragmentType.CODE)
@@ -1193,19 +1219,12 @@ public class ContextSerializationTest {
                 .orElseThrow();
 
         if (loadedRawFragment instanceof ContextFragment.CodeFragment loadedFragment) {
-            assertEquals(codeUnit.fqName(), loadedFragment.getCodeUnit().fqName());
-        } else if (loadedRawFragment instanceof FrozenFragment loadedFrozenFragment) {
-            assertEquals(ContextFragment.FragmentType.CODE, loadedFrozenFragment.getType());
-            assertEquals(ContextFragment.CodeFragment.class.getName(), loadedFrozenFragment.originalClassName());
-            assertEquals(
-                    "com.example.CodeFragmentTarget",
-                    loadedFrozenFragment.meta().get("fqName"));
-            assertEquals(
-                    projectFile.getRoot().toString(),
-                    loadedFrozenFragment.meta().get("repoRoot"));
-            assertEquals(
-                    projectFile.getRelPath().toString(),
-                    loadedFrozenFragment.meta().get("relPath"));
+            var maybeCu = loadedFragment.computedUnit().await(Duration.ofSeconds(10));
+            if (maybeCu.isPresent()) {
+                assertEquals(codeUnit.fqName(), maybeCu.get().fqName());
+            } else {
+                fail("Code unit could not be computed within 10 seconds");
+            }
         } else {
             fail("Expected CodeFragment or FrozenFragment, got: " + loadedRawFragment.getClass());
         }
@@ -1239,13 +1258,6 @@ public class ContextSerializationTest {
         if (loadedRawFragment1 instanceof ContextFragment.SummaryFragment loadedFragment) {
             assertEquals("com.example.TargetClass", loadedFragment.getTargetIdentifier());
             assertEquals(ContextFragment.SummaryType.CODEUNIT_SKELETON, loadedFragment.getSummaryType());
-        } else if (loadedRawFragment1 instanceof FrozenFragment loadedFrozenFragment) {
-            assertEquals(ContextFragment.FragmentType.SKELETON, loadedFrozenFragment.getType());
-            assertEquals(ContextFragment.SummaryFragment.class.getName(), loadedFrozenFragment.originalClassName());
-            assertEquals("com.example.TargetClass", loadedFrozenFragment.meta().get("targetIdentifier"));
-            assertEquals(
-                    ContextFragment.SummaryType.CODEUNIT_SKELETON.name(),
-                    loadedFrozenFragment.meta().get("summaryType"));
         } else {
             fail("Expected SummaryFragment or FrozenFragment, got: " + loadedRawFragment1.getClass());
         }
@@ -1280,13 +1292,6 @@ public class ContextSerializationTest {
         if (loadedRawFragment2 instanceof ContextFragment.SummaryFragment loadedFragment) {
             assertEquals(projectFile.toString(), loadedFragment.getTargetIdentifier());
             assertEquals(ContextFragment.SummaryType.FILE_SKELETONS, loadedFragment.getSummaryType());
-        } else if (loadedRawFragment2 instanceof FrozenFragment loadedFrozenFragment) {
-            assertEquals(ContextFragment.FragmentType.SKELETON, loadedFrozenFragment.getType());
-            assertEquals(ContextFragment.SummaryFragment.class.getName(), loadedFrozenFragment.originalClassName());
-            assertEquals(projectFile.toString(), loadedFrozenFragment.meta().get("targetIdentifier"));
-            assertEquals(
-                    ContextFragment.SummaryType.FILE_SKELETONS.name(),
-                    loadedFrozenFragment.meta().get("summaryType"));
         } else {
             fail("Expected SummaryFragment or FrozenFragment, got: " + loadedRawFragment2.getClass());
         }
@@ -1318,5 +1323,200 @@ public class ContextSerializationTest {
         assertEquals(
                 Service.ReasoningLevel.DEFAULT,
                 loadedEntry.meta().primaryModel().reasoning());
+    }
+
+    @Test
+    void testReadOnlyRoundTripForEditableFragments() throws Exception {
+        // Create editable ProjectPathFragment and CodeFragment, plus non-editable StringFragment
+        var projectFile = new ProjectFile(tempDir, "src/RoTest.java");
+        Files.createDirectories(projectFile.absPath().getParent());
+        Files.writeString(projectFile.absPath(), "public class RoTest {}");
+
+        var ppf = new ContextFragment.ProjectPathFragment(projectFile, mockContextManager);
+
+        var codeUnit = createTestCodeUnit(
+                "com.example.CodeFragmentTarget", new ProjectFile(tempDir, "src/CodeFragmentTarget.java"));
+        var codeFrag = new ContextFragment.CodeFragment(mockContextManager, codeUnit);
+
+        var sf = new ContextFragment.StringFragment(
+                mockContextManager, "text", "desc", SyntaxConstants.SYNTAX_STYLE_NONE);
+
+        var ctx = new Context(mockContextManager, "ctx-ro")
+                .addPathFragments(List.of(ppf))
+                .addVirtualFragment(codeFrag)
+                .addVirtualFragment(sf);
+        // Toggle read-only via Context
+        ctx = ctx.setReadonly(ppf, true);
+        ctx = ctx.setReadonly(codeFrag, true);
+
+        ContextHistory ch = new ContextHistory(ctx);
+
+        Path zipFile = tempDir.resolve("readonly_roundtrip.zip");
+        HistoryIo.writeZip(ch, zipFile);
+
+        // Verify serialization: contexts.jsonl contains readonly IDs for ppf and codeFrag
+        var readonlyIds = readReadonlyIdsFromZip(zipFile);
+        assertTrue(readonlyIds.contains(ppf.id()), "readonly should contain ProjectPathFragment id");
+        assertTrue(readonlyIds.contains(codeFrag.id()), "readonly should contain CodeFragment id");
+        assertFalse(readonlyIds.contains(sf.id()), "readonly should not contain non-editable StringFragment id");
+
+        // Verify deserialization preserves readOnly flags for editable fragments
+        ContextHistory loaded = HistoryIo.readZip(zipFile, mockContextManager);
+        var loadedCtx = loaded.getHistory().getFirst();
+
+        var loadedPpf = loadedCtx
+                .fileFragments()
+                .filter(f -> f instanceof ContextFragment.ProjectPathFragment)
+                .map(f -> (ContextFragment.ProjectPathFragment) f)
+                .findFirst()
+                .orElseThrow();
+        assertTrue(loadedCtx.isReadOnly(loadedPpf), "Loaded ProjectPathFragment should be read-only");
+
+        var loadedCode = loadedCtx
+                .virtualFragments()
+                .filter(f -> f instanceof ContextFragment.CodeFragment)
+                .map(f -> (ContextFragment.CodeFragment) f)
+                .findFirst()
+                .orElseThrow();
+        assertTrue(loadedCtx.isReadOnly(loadedCode), "Loaded CodeFragment should be read-only");
+    }
+
+    @Test
+    void testReadOnlyBackwardCompatibilityLongerAndShorterLists() throws Exception {
+        // Build a simple context with one editable and one non-editable fragment
+        var projectFile = new ProjectFile(tempDir, "src/BC.java");
+        Files.createDirectories(projectFile.absPath().getParent());
+        Files.writeString(projectFile.absPath(), "public class BC {}");
+
+        var ppf = new ContextFragment.ProjectPathFragment(projectFile, mockContextManager);
+        var sf = new ContextFragment.StringFragment(mockContextManager, "s", "desc", SyntaxConstants.SYNTAX_STYLE_NONE);
+
+        var ctx = new Context(mockContextManager, "ctx-bc")
+                .addPathFragments(List.of(ppf))
+                .addVirtualFragment(sf);
+
+        ContextHistory ch = new ContextHistory(ctx);
+        Path original = tempDir.resolve("bc_original.zip");
+        HistoryIo.writeZip(ch, original);
+
+        // Case 1: Longer list (add unknown id and non-editable id)
+        Path longerZip = tempDir.resolve("bc_longer.zip");
+        rewriteContextsInZip(original, longerZip, line -> {
+            try {
+                var mapper = new com.fasterxml.jackson.databind.ObjectMapper();
+                Map<String, Object> obj = mapper.readValue(line, Map.class);
+                @SuppressWarnings("unchecked")
+                List<String> readonly = (List<String>) obj.getOrDefault("readonly", new ArrayList<>());
+                readonly = new ArrayList<>(readonly);
+                readonly.add("bogus-id-not-present");
+                readonly.add(sf.id()); // include non-editable fragment ID
+                obj.put("readonly", readonly);
+                return mapper.writeValueAsString(obj);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        });
+
+        ContextHistory loadedLonger = HistoryIo.readZip(longerZip, mockContextManager);
+        var loadedPpf = loadedLonger
+                .getHistory()
+                .getFirst()
+                .fileFragments()
+                .filter(f -> f instanceof ContextFragment.ProjectPathFragment)
+                .map(f -> (ContextFragment.ProjectPathFragment) f)
+                .findFirst()
+                .orElseThrow();
+        // Since original readonly list was empty, and we only added ids (including non-editable), ProjectPath remains
+        // not read-only
+        assertFalse(
+                loadedLonger.getHistory().getFirst().isReadOnly(loadedPpf),
+                "Editable fragment should remain not read-only when list contains unknown/non-editable ids only");
+
+        // Case 2: Shorter list (explicitly clear readonly even if we set it true pre-serialization)
+        // Set readOnly via Context and serialize
+        var ctx2 = new Context(mockContextManager, "ctx-bc2").addPathFragments(List.of(ppf));
+        ctx2 = ctx2.setReadonly(ppf, true);
+        ContextHistory ch2 = new ContextHistory(ctx2);
+        Path marked = tempDir.resolve("bc_marked.zip");
+        HistoryIo.writeZip(ch2, marked);
+
+        // Now remove ID from readonly to simulate shorter list
+        Path shorterZip = tempDir.resolve("bc_shorter.zip");
+        rewriteContextsInZip(marked, shorterZip, line -> {
+            try {
+                var mapper = new com.fasterxml.jackson.databind.ObjectMapper();
+                Map<String, Object> obj = mapper.readValue(line, Map.class);
+                obj.put("readonly", new ArrayList<>()); // clear readonly list
+                return mapper.writeValueAsString(obj);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        });
+
+        ContextHistory loadedShorter = HistoryIo.readZip(shorterZip, mockContextManager);
+        var loadedPpf2 = loadedShorter
+                .getHistory()
+                .getFirst()
+                .fileFragments()
+                .filter(f -> f instanceof ContextFragment.ProjectPathFragment)
+                .map(f -> (ContextFragment.ProjectPathFragment) f)
+                .findFirst()
+                .orElseThrow();
+        assertFalse(
+                loadedShorter.getHistory().getFirst().isReadOnly(loadedPpf2),
+                "Editable fragment should default to not read-only when id absent");
+    }
+
+    // Helper: read readonly IDs from contexts.jsonl inside zip
+    private Set<String> readReadonlyIdsFromZip(Path zip) throws IOException {
+        try (var zis = new java.util.zip.ZipInputStream(Files.newInputStream(zip))) {
+            java.util.zip.ZipEntry entry;
+            while ((entry = zis.getNextEntry()) != null) {
+                if ("contexts.jsonl".equals(entry.getName())) {
+                    String content = new String(zis.readAllBytes(), java.nio.charset.StandardCharsets.UTF_8);
+                    String firstLine = content.lines()
+                            .filter(s -> !s.isBlank())
+                            .findFirst()
+                            .orElse("");
+                    if (firstLine.isEmpty()) return Set.of();
+                    var mapper = new com.fasterxml.jackson.databind.ObjectMapper();
+                    Map<String, Object> obj = mapper.readValue(firstLine, Map.class);
+                    @SuppressWarnings("unchecked")
+                    List<String> readonly = (List<String>) obj.getOrDefault("readonly", List.of());
+                    return new java.util.HashSet<>(readonly);
+                }
+            }
+        }
+        return Set.of();
+    }
+
+    // Helper: rewrite contexts.jsonl in a zip file using a single-line transform
+    private void rewriteContextsInZip(Path source, Path target, java.util.function.Function<String, String> transform)
+            throws IOException {
+        Map<String, byte[]> entries = new LinkedHashMap<>();
+        try (var zis = new java.util.zip.ZipInputStream(Files.newInputStream(source))) {
+            java.util.zip.ZipEntry e;
+            while ((e = zis.getNextEntry()) != null) {
+                if (e.getName().equals("contexts.jsonl")) {
+                    String content = new String(zis.readAllBytes(), java.nio.charset.StandardCharsets.UTF_8);
+                    List<String> lines = content.lines().toList();
+                    List<String> transformed = lines.stream()
+                            .filter(s -> !s.isBlank())
+                            .map(transform)
+                            .toList();
+                    String newContent = String.join("\n", transformed) + "\n";
+                    entries.put(e.getName(), newContent.getBytes(java.nio.charset.StandardCharsets.UTF_8));
+                } else {
+                    entries.put(e.getName(), zis.readAllBytes());
+                }
+            }
+        }
+        try (var zos = new java.util.zip.ZipOutputStream(Files.newOutputStream(target))) {
+            for (var en : entries.entrySet()) {
+                zos.putNextEntry(new java.util.zip.ZipEntry(en.getKey()));
+                zos.write(en.getValue());
+                zos.closeEntry();
+            }
+        }
     }
 }
